parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> PROGRAM_KWD ID seen_program_id SEMI_COLON STRUCTURE_DEFINITION MAIN_KWD OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_CURLY seen_main_kwd STATEMENT_STAR CLOSE_CURLY
Rule 2     STRUCTURE_DEFINITION -> GLOBAL_VAR STRUCTURE_DEFINITION
Rule 3     STRUCTURE_DEFINITION -> CLASS_STAR STRUCTURE_DEFINITION
Rule 4     STRUCTURE_DEFINITION -> FUNC_DEF_STAR STRUCTURE_DEFINITION
Rule 5     STRUCTURE_DEFINITION -> empty
Rule 6     seen_program_id -> empty
Rule 7     seen_main_kwd -> empty
Rule 8     CLASS_STAR -> CLASS CLASS_STAR
Rule 9     CLASS_STAR -> empty
Rule 10    CLASS -> CLASS_KWD ID seen_class_id_declaration OPEN_CURLY CLASS_ATTR seen_class_attr FUNC_DEF_STAR CLOSE_CURLY
Rule 11    seen_class_id_declaration -> empty
Rule 12    seen_class_attr -> empty
Rule 13    CLASS_ATTR -> ATTR_KWD OPEN_CURLY VAR_LIST_STAR CLOSE_CURLY
Rule 14    VAR_LIST_STAR -> VAR_LIST VAR_LIST_STAR
Rule 15    VAR_LIST_STAR -> empty
Rule 16    VAR_LIST -> TYPE SYMBOL_LIST SEMI_COLON
Rule 17    SYMBOL_LIST -> ID SYMBOL_LIST_P
Rule 18    SYMBOL_LIST -> ARRAY_DECLARATION SYMBOL_LIST_P
Rule 19    SYMBOL_LIST_P -> COMMA ID SYMBOL_LIST_P
Rule 20    SYMBOL_LIST_P -> COMMA ARRAY_DECLARATION SYMBOL_LIST_P
Rule 21    SYMBOL_LIST_P -> COMMA
Rule 22    SYMBOL_LIST_P -> empty
Rule 23    READABLE_LIST -> VAR seen_var_in_assign seen_readable READABLE_LIST_P
Rule 24    READABLE_LIST_P -> COMMA VAR seen_var_in_assign seen_readable READABLE_LIST_P
Rule 25    READABLE_LIST_P -> empty
Rule 26    seen_readable -> empty
Rule 27    GLOBAL_VAR -> VAR_LIST_STAR
Rule 28    FUNC_DEF_STAR -> FUNC_DEF FUNC_DEF_STAR
Rule 29    FUNC_DEF_STAR -> empty
Rule 30    FUNC_DEF -> TYPE ID seen_func_id OPEN_PARENTHESIS FUNC_PARAM CLOSE_PARENTHESIS seen_func_params VARS seen_func_vars OPEN_CURLY STATEMENT_STAR CLOSE_CURLY
Rule 31    seen_func_id -> empty
Rule 32    seen_func_params -> empty
Rule 33    seen_func_vars -> empty
Rule 34    FUNC_PARAM -> VAR_DECLARATION FUNC_PARAM_P
Rule 35    FUNC_PARAM -> empty
Rule 36    FUNC_PARAM_P -> COMMA VAR_DECLARATION FUNC_PARAM_P
Rule 37    FUNC_PARAM_P -> empty
Rule 38    VAR_DECLARATION -> TYPE ID
Rule 39    VARS -> VARS_KWD OPEN_CURLY VAR_LIST_STAR CLOSE_CURLY
Rule 40    STATEMENT_STAR -> STATEMENT STATEMENT_STAR
Rule 41    STATEMENT_STAR -> empty
Rule 42    STATEMENT -> ASSIGN SEMI_COLON
Rule 43    STATEMENT -> FUNC_CALL SEMI_COLON
Rule 44    STATEMENT -> READ SEMI_COLON
Rule 45    STATEMENT -> PRINT SEMI_COLON
Rule 46    STATEMENT -> PRINTLN SEMI_COLON
Rule 47    STATEMENT -> OPEN SEMI_COLON
Rule 48    STATEMENT -> WRITE SEMI_COLON
Rule 49    STATEMENT -> FLOW_CONTROL
Rule 50    STATEMENT -> FUNC_RETURN
Rule 51    OPEN -> OPEN_KWD OPEN_PARENTHESIS VAR seen_var_in_io seen_open_buffer COMMA EXPRESSION seen_file_path COMMA EXPRESSION seen_separator CLOSE_PARENTHESIS
Rule 52    seen_open_buffer -> empty
Rule 53    WRITE -> WRITE_KWD OPEN_PARENTHESIS VAR seen_var_in_io seen_write_buffer COMMA EXPRESSION seen_file_path COMMA EXPRESSION seen_separator CLOSE_PARENTHESIS
Rule 54    seen_write_buffer -> empty
Rule 55    seen_file_path -> empty
Rule 56    seen_separator -> empty
Rule 57    FLOW_CONTROL -> DECISION
Rule 58    FLOW_CONTROL -> REPETITION
Rule 59    FOR_INCR_STATEMENT -> ASSIGN
Rule 60    FOR_INCR_STATEMENT -> FUNC_CALL
Rule 61    FOR_INCR_STATEMENT -> READ
Rule 62    FOR_INCR_STATEMENT -> PRINT
Rule 63    FOR_INCR_STATEMENT -> PRINTLN
Rule 64    ASSIGN -> VAR seen_var_in_assign EQUALS seen_equals EXPRESSION
Rule 65    seen_equals -> empty
Rule 66    EXP -> TERM seen_term EXP_P
Rule 67    EXP -> MINUS seen_unary_minus EXP pop_unary_minus
Rule 68    EXP -> NOT seen_not EXP pop_not
Rule 69    seen_term -> <empty>
Rule 70    EXP_P -> PLUS seen_term_op TERM seen_term EXP_P
Rule 71    EXP_P -> MINUS seen_term_op TERM seen_term EXP_P
Rule 72    EXP_P -> empty
Rule 73    seen_term_op -> <empty>
Rule 74    EXPRESSION -> EXP
Rule 75    EXPRESSION -> EXP COMP seen_comp_op EXPRESSION seen_comp
Rule 76    seen_comp -> empty
Rule 77    seen_comp_op -> empty
Rule 78    COMP -> BIGGER
Rule 79    COMP -> BIGGER_EQ
Rule 80    COMP -> SMALLER
Rule 81    COMP -> SMALLER_EQ
Rule 82    COMP -> DOUBLE_EQUALS
Rule 83    COMP -> NOT_EQUALS
Rule 84    COMP -> AND
Rule 85    COMP -> OR
Rule 86    FACTOR -> OPEN_PARENTHESIS seen_open_parenthesis EXPRESSION CLOSE_PARENTHESIS seen_close_parenthesis
Rule 87    FACTOR -> NOT seen_not FACTOR pop_not
Rule 88    FACTOR -> MINUS seen_unary_minus FACTOR pop_unary_minus
Rule 89    FACTOR -> FUNC_CALL
Rule 90    FACTOR -> CLASS_INSTANCE
Rule 91    FACTOR -> VAR seen_var_as_factor
Rule 92    FACTOR -> CNST
Rule 93    pop_not -> empty
Rule 94    seen_not -> empty
Rule 95    pop_unary_minus -> empty
Rule 96    seen_unary_minus -> empty
Rule 97    seen_open_parenthesis -> empty
Rule 98    seen_close_parenthesis -> empty
Rule 99    seen_var_in_assign -> empty
Rule 100   seen_var_as_factor -> empty
Rule 101   seen_var_in_io -> empty
Rule 102   seen_cte_i -> <empty>
Rule 103   seen_cte_f -> <empty>
Rule 104   seen_cte_s -> <empty>
Rule 105   CNST -> CTE_S seen_cte_s
Rule 106   CNST -> CTE_F seen_cte_f
Rule 107   CNST -> CTE_I seen_cte_i
Rule 108   CLASS_REFERENCE -> ID DOT seen_dot_operator
Rule 109   CLASS_REFERENCE -> THIS_KWD seen_this_kwd DOT seen_this_dot_operator
Rule 110   seen_this_kwd -> empty
Rule 111   VAR -> ID
Rule 112   VAR -> ARRAY
Rule 113   VAR -> CLASS_REFERENCE VAR
Rule 114   CLASS_INSTANCE -> NEW_KWD ID seen_class_id_instance OPEN_PARENTHESIS CLOSE_PARENTHESIS
Rule 115   seen_class_id_instance -> empty
Rule 116   seen_dot_operator -> empty
Rule 117   seen_this_dot_operator -> empty
Rule 118   ARRAY -> ID seen_array_id OPEN_BRACKET seen_open_bracket EXPRESSION seen_array_access CLOSE_BRACKET ARRAY_P
Rule 119   ARRAY_P -> OPEN_BRACKET seen_open_bracket EXPRESSION seen_array_access CLOSE_BRACKET ARRAY_P
Rule 120   ARRAY_P -> empty
Rule 121   seen_array_id -> empty
Rule 122   seen_open_bracket -> empty
Rule 123   seen_array_access -> empty
Rule 124   ARRAY_DECLARATION -> ID seen_array_def_id OPEN_BRACKET CTE_I seen_cte_i seen_array_def_dim CLOSE_BRACKET ARRAY_DECLARATION_P
Rule 125   ARRAY_DECLARATION_P -> OPEN_BRACKET CTE_I seen_cte_i seen_array_def_dim CLOSE_BRACKET ARRAY_DECLARATION_P
Rule 126   ARRAY_DECLARATION_P -> empty
Rule 127   seen_array_def_id -> empty
Rule 128   seen_array_def_dim -> empty
Rule 129   TERM -> FACTOR seen_factor TERM_P
Rule 130   TERM_P -> STAR seen_factor_op FACTOR seen_factor TERM_P
Rule 131   TERM_P -> FWD_SLASH seen_factor_op FACTOR seen_factor TERM_P
Rule 132   TERM_P -> empty
Rule 133   seen_factor -> empty
Rule 134   seen_factor_op -> empty
Rule 135   FUNC_CALL -> ID seen_func_call_id OPEN_PARENTHESIS ARG_LIST CLOSE_PARENTHESIS
Rule 136   FUNC_CALL -> CLASS_REFERENCE FUNC_CALL
Rule 137   seen_func_call_id -> empty
Rule 138   ARG_LIST -> VAR seen_var_as_factor seen_arg ARG_LIST_P
Rule 139   ARG_LIST -> EXPRESSION seen_arg ARG_LIST_P
Rule 140   ARG_LIST -> FUNC_CALL seen_arg ARG_LIST_P
Rule 141   ARG_LIST -> empty
Rule 142   ARG_LIST_P -> COMMA VAR seen_var_as_factor seen_arg ARG_LIST_P
Rule 143   ARG_LIST_P -> COMMA EXPRESSION seen_arg ARG_LIST_P
Rule 144   ARG_LIST_P -> COMMA FUNC_CALL seen_arg ARG_LIST_P
Rule 145   ARG_LIST_P -> empty
Rule 146   seen_arg -> empty
Rule 147   FUNC_RETURN -> RETURN_KWD EXPRESSION SEMI_COLON
Rule 148   FUNC_RETURN -> RETURN_KWD FUNC_CALL SEMI_COLON
Rule 149   FUNC_RETURN -> RETURN_KWD SEMI_COLON
Rule 150   READ -> READ_KWD OPEN_PARENTHESIS READABLE_LIST CLOSE_PARENTHESIS
Rule 151   PRINT -> PRINT_KWD seen_print_kwd OPEN_PARENTHESIS PRINTABLE CLOSE_PARENTHESIS
Rule 152   seen_print_kwd -> empty
Rule 153   PRINTLN -> PRINTLN_KWD seen_println_kwd OPEN_PARENTHESIS PRINTABLE CLOSE_PARENTHESIS
Rule 154   seen_println_kwd -> empty
Rule 155   PRINTABLE -> EXPRESSION seen_printable PRINTABLE_P
Rule 156   PRINTABLE_P -> COMMA EXPRESSION seen_printable PRINTABLE_P
Rule 157   PRINTABLE_P -> empty
Rule 158   seen_printable -> empty
Rule 159   DECISION -> IF_KWD OPEN_PARENTHESIS EXPRESSION CLOSE_PARENTHESIS seen_if_kwd OPEN_CURLY STATEMENT_STAR CLOSE_CURLY DECISION_P
Rule 160   DECISION_P -> ELSE_KWD seen_else_kwd OPEN_CURLY STATEMENT_STAR CLOSE_CURLY
Rule 161   DECISION_P -> empty
Rule 162   seen_if_kwd -> empty
Rule 163   seen_else_kwd -> empty
Rule 164   REPETITION -> CONDITIONAL_REP
Rule 165   REPETITION -> UNCONDITIONAL_REP
Rule 166   CONDITIONAL_REP -> WHILE_KWD seen_while_kwd OPEN_PARENTHESIS EXPRESSION CLOSE_PARENTHESIS seen_while_exp OPEN_CURLY STATEMENT_STAR CLOSE_CURLY
Rule 167   seen_while_kwd -> empty
Rule 168   seen_while_exp -> empty
Rule 169   UNCONDITIONAL_REP -> FOR_KWD OPEN_PARENTHESIS VAR seen_for_kwd EQUALS EXPRESSION seen_for_start_exp SEMI_COLON EXPRESSION seen_for_end_exp SEMI_COLON FOR_INCR_STATEMENT seen_for_incr_exp CLOSE_PARENTHESIS OPEN_CURLY STATEMENT_STAR CLOSE_CURLY
Rule 170   seen_for_kwd -> empty
Rule 171   seen_for_incr_exp -> empty
Rule 172   seen_for_start_exp -> empty
Rule 173   seen_for_end_exp -> empty
Rule 174   TYPE -> TYPE_I
Rule 175   TYPE -> TYPE_F
Rule 176   TYPE -> TYPE_S
Rule 177   TYPE -> TYPE_B
Rule 178   TYPE -> TYPE_O
Rule 179   TYPE -> TYPE_V
Rule 180   empty -> <empty>

Terminals, with rules where they appear

AND                  : 84
ATTR_KWD             : 13
BIGGER               : 78
BIGGER_EQ            : 79
CLASS_KWD            : 10
CLOSE_BRACKET        : 118 119 124 125
CLOSE_CURLY          : 1 10 13 30 39 159 160 166 169
CLOSE_PARENTHESIS    : 1 30 51 53 86 114 135 150 151 153 159 166 169
COMMA                : 19 20 21 24 36 51 51 53 53 142 143 144 156
CTE_F                : 106
CTE_I                : 107 124 125
CTE_S                : 105
DOT                  : 108 109
DOUBLE_EQUALS        : 82
ELSE_KWD             : 160
EQUALS               : 64 169
FOR_KWD              : 169
FWD_SLASH            : 131
ID                   : 1 10 17 19 30 38 108 111 114 118 124 135
IF_KWD               : 159
MAIN_KWD             : 1
MINUS                : 67 71 88
NEW_KWD              : 114
NOT                  : 68 87
NOT_EQUALS           : 83
OPEN_BRACKET         : 118 119 124 125
OPEN_CURLY           : 1 10 13 30 39 159 160 166 169
OPEN_KWD             : 51
OPEN_PARENTHESIS     : 1 30 51 53 86 114 135 150 151 153 159 166 169
OR                   : 85
PLUS                 : 70
PRINTLN_KWD          : 153
PRINT_KWD            : 151
PROGRAM_KWD          : 1
READ_KWD             : 150
RETURN_KWD           : 147 148 149
SEMI_COLON           : 1 16 42 43 44 45 46 47 48 147 148 149 169 169
SMALLER              : 80
SMALLER_EQ           : 81
STAR                 : 130
THIS_KWD             : 109
TYPE_B               : 177
TYPE_F               : 175
TYPE_I               : 174
TYPE_O               : 178
TYPE_S               : 176
TYPE_V               : 179
VARS_KWD             : 39
WHILE_KWD            : 166
WRITE_KWD            : 53
error                : 

Nonterminals, with rules where they appear

ARG_LIST             : 135
ARG_LIST_P           : 138 139 140 142 143 144
ARRAY                : 112
ARRAY_DECLARATION    : 18 20
ARRAY_DECLARATION_P  : 124 125
ARRAY_P              : 118 119
ASSIGN               : 42 59
CLASS                : 8
CLASS_ATTR           : 10
CLASS_INSTANCE       : 90
CLASS_REFERENCE      : 113 136
CLASS_STAR           : 3 8
CNST                 : 92
COMP                 : 75
CONDITIONAL_REP      : 164
DECISION             : 57
DECISION_P           : 159
EXP                  : 67 68 74 75
EXPRESSION           : 51 51 53 53 64 75 86 118 119 139 143 147 155 156 159 166 169 169
EXP_P                : 66 70 71
FACTOR               : 87 88 129 130 131
FLOW_CONTROL         : 49
FOR_INCR_STATEMENT   : 169
FUNC_CALL            : 43 60 89 136 140 144 148
FUNC_DEF             : 28
FUNC_DEF_STAR        : 4 10 28
FUNC_PARAM           : 30
FUNC_PARAM_P         : 34 36
FUNC_RETURN          : 50
GLOBAL_VAR           : 2
OPEN                 : 47
PRINT                : 45 62
PRINTABLE            : 151 153
PRINTABLE_P          : 155 156
PRINTLN              : 46 63
PROGRAM              : 0
READ                 : 44 61
READABLE_LIST        : 150
READABLE_LIST_P      : 23 24
REPETITION           : 58
STATEMENT            : 40
STATEMENT_STAR       : 1 30 40 159 160 166 169
STRUCTURE_DEFINITION : 1 2 3 4
SYMBOL_LIST          : 16
SYMBOL_LIST_P        : 17 18 19 20
TERM                 : 66 70 71
TERM_P               : 129 130 131
TYPE                 : 16 30 38
UNCONDITIONAL_REP    : 165
VAR                  : 23 24 51 53 64 91 113 138 142 169
VARS                 : 30
VAR_DECLARATION      : 34 36
VAR_LIST             : 14
VAR_LIST_STAR        : 13 14 27 39
WRITE                : 48
empty                : 5 6 7 9 11 12 15 22 25 26 29 31 32 33 35 37 41 52 54 55 56 65 72 76 77 93 94 95 96 97 98 99 100 101 110 115 116 117 120 121 122 123 126 127 128 132 133 134 137 141 145 146 152 154 157 158 161 162 163 167 168 170 171 172 173
pop_not              : 68 87
pop_unary_minus      : 67 88
seen_arg             : 138 139 140 142 143 144
seen_array_access    : 118 119
seen_array_def_dim   : 124 125
seen_array_def_id    : 124
seen_array_id        : 118
seen_class_attr      : 10
seen_class_id_declaration : 10
seen_class_id_instance : 114
seen_close_parenthesis : 86
seen_comp            : 75
seen_comp_op         : 75
seen_cte_f           : 106
seen_cte_i           : 107 124 125
seen_cte_s           : 105
seen_dot_operator    : 108
seen_else_kwd        : 160
seen_equals          : 64
seen_factor          : 129 130 131
seen_factor_op       : 130 131
seen_file_path       : 51 53
seen_for_end_exp     : 169
seen_for_incr_exp    : 169
seen_for_kwd         : 169
seen_for_start_exp   : 169
seen_func_call_id    : 135
seen_func_id         : 30
seen_func_params     : 30
seen_func_vars       : 30
seen_if_kwd          : 159
seen_main_kwd        : 1
seen_not             : 68 87
seen_open_bracket    : 118 119
seen_open_buffer     : 51
seen_open_parenthesis : 86
seen_print_kwd       : 151
seen_printable       : 155 156
seen_println_kwd     : 153
seen_program_id      : 1
seen_readable        : 23 24
seen_separator       : 51 53
seen_term            : 66 70 71
seen_term_op         : 70 71
seen_this_dot_operator : 109
seen_this_kwd        : 109
seen_unary_minus     : 67 88
seen_var_as_factor   : 91 138 142
seen_var_in_assign   : 23 24 64
seen_var_in_io       : 51 53
seen_while_exp       : 166
seen_while_kwd       : 166
seen_write_buffer    : 53

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . PROGRAM_KWD ID seen_program_id SEMI_COLON STRUCTURE_DEFINITION MAIN_KWD OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_CURLY seen_main_kwd STATEMENT_STAR CLOSE_CURLY

    PROGRAM_KWD     shift and go to state 2

    PROGRAM                        shift and go to state 1

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> PROGRAM_KWD . ID seen_program_id SEMI_COLON STRUCTURE_DEFINITION MAIN_KWD OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_CURLY seen_main_kwd STATEMENT_STAR CLOSE_CURLY

    ID              shift and go to state 3


state 3

    (1) PROGRAM -> PROGRAM_KWD ID . seen_program_id SEMI_COLON STRUCTURE_DEFINITION MAIN_KWD OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_CURLY seen_main_kwd STATEMENT_STAR CLOSE_CURLY
    (6) seen_program_id -> . empty
    (180) empty -> .

    SEMI_COLON      reduce using rule 180 (empty -> .)

    seen_program_id                shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) PROGRAM -> PROGRAM_KWD ID seen_program_id . SEMI_COLON STRUCTURE_DEFINITION MAIN_KWD OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_CURLY seen_main_kwd STATEMENT_STAR CLOSE_CURLY

    SEMI_COLON      shift and go to state 6


state 5

    (6) seen_program_id -> empty .

    SEMI_COLON      reduce using rule 6 (seen_program_id -> empty .)


state 6

    (1) PROGRAM -> PROGRAM_KWD ID seen_program_id SEMI_COLON . STRUCTURE_DEFINITION MAIN_KWD OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_CURLY seen_main_kwd STATEMENT_STAR CLOSE_CURLY
    (2) STRUCTURE_DEFINITION -> . GLOBAL_VAR STRUCTURE_DEFINITION
    (3) STRUCTURE_DEFINITION -> . CLASS_STAR STRUCTURE_DEFINITION
    (4) STRUCTURE_DEFINITION -> . FUNC_DEF_STAR STRUCTURE_DEFINITION
    (5) STRUCTURE_DEFINITION -> . empty
    (27) GLOBAL_VAR -> . VAR_LIST_STAR
    (8) CLASS_STAR -> . CLASS CLASS_STAR
    (9) CLASS_STAR -> . empty
    (28) FUNC_DEF_STAR -> . FUNC_DEF FUNC_DEF_STAR
    (29) FUNC_DEF_STAR -> . empty
    (180) empty -> .
    (14) VAR_LIST_STAR -> . VAR_LIST VAR_LIST_STAR
    (15) VAR_LIST_STAR -> . empty
    (10) CLASS -> . CLASS_KWD ID seen_class_id_declaration OPEN_CURLY CLASS_ATTR seen_class_attr FUNC_DEF_STAR CLOSE_CURLY
    (30) FUNC_DEF -> . TYPE ID seen_func_id OPEN_PARENTHESIS FUNC_PARAM CLOSE_PARENTHESIS seen_func_params VARS seen_func_vars OPEN_CURLY STATEMENT_STAR CLOSE_CURLY
    (16) VAR_LIST -> . TYPE SYMBOL_LIST SEMI_COLON
    (174) TYPE -> . TYPE_I
    (175) TYPE -> . TYPE_F
    (176) TYPE -> . TYPE_S
    (177) TYPE -> . TYPE_B
    (178) TYPE -> . TYPE_O
    (179) TYPE -> . TYPE_V

  ! shift/reduce conflict for CLASS_KWD resolved as shift
  ! shift/reduce conflict for TYPE_I resolved as shift
  ! shift/reduce conflict for TYPE_F resolved as shift
  ! shift/reduce conflict for TYPE_S resolved as shift
  ! shift/reduce conflict for TYPE_B resolved as shift
  ! shift/reduce conflict for TYPE_O resolved as shift
  ! shift/reduce conflict for TYPE_V resolved as shift
    MAIN_KWD        reduce using rule 180 (empty -> .)
    CLASS_KWD       shift and go to state 16
    TYPE_I          shift and go to state 18
    TYPE_F          shift and go to state 19
    TYPE_S          shift and go to state 20
    TYPE_B          shift and go to state 21
    TYPE_O          shift and go to state 22
    TYPE_V          shift and go to state 23

  ! CLASS_KWD       [ reduce using rule 180 (empty -> .) ]
  ! TYPE_I          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_F          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_S          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_B          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_O          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_V          [ reduce using rule 180 (empty -> .) ]

    STRUCTURE_DEFINITION           shift and go to state 7
    GLOBAL_VAR                     shift and go to state 8
    CLASS_STAR                     shift and go to state 9
    FUNC_DEF_STAR                  shift and go to state 10
    empty                          shift and go to state 11
    VAR_LIST_STAR                  shift and go to state 12
    CLASS                          shift and go to state 13
    FUNC_DEF                       shift and go to state 14
    VAR_LIST                       shift and go to state 15
    TYPE                           shift and go to state 17

state 7

    (1) PROGRAM -> PROGRAM_KWD ID seen_program_id SEMI_COLON STRUCTURE_DEFINITION . MAIN_KWD OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_CURLY seen_main_kwd STATEMENT_STAR CLOSE_CURLY

    MAIN_KWD        shift and go to state 24


state 8

    (2) STRUCTURE_DEFINITION -> GLOBAL_VAR . STRUCTURE_DEFINITION
    (2) STRUCTURE_DEFINITION -> . GLOBAL_VAR STRUCTURE_DEFINITION
    (3) STRUCTURE_DEFINITION -> . CLASS_STAR STRUCTURE_DEFINITION
    (4) STRUCTURE_DEFINITION -> . FUNC_DEF_STAR STRUCTURE_DEFINITION
    (5) STRUCTURE_DEFINITION -> . empty
    (27) GLOBAL_VAR -> . VAR_LIST_STAR
    (8) CLASS_STAR -> . CLASS CLASS_STAR
    (9) CLASS_STAR -> . empty
    (28) FUNC_DEF_STAR -> . FUNC_DEF FUNC_DEF_STAR
    (29) FUNC_DEF_STAR -> . empty
    (180) empty -> .
    (14) VAR_LIST_STAR -> . VAR_LIST VAR_LIST_STAR
    (15) VAR_LIST_STAR -> . empty
    (10) CLASS -> . CLASS_KWD ID seen_class_id_declaration OPEN_CURLY CLASS_ATTR seen_class_attr FUNC_DEF_STAR CLOSE_CURLY
    (30) FUNC_DEF -> . TYPE ID seen_func_id OPEN_PARENTHESIS FUNC_PARAM CLOSE_PARENTHESIS seen_func_params VARS seen_func_vars OPEN_CURLY STATEMENT_STAR CLOSE_CURLY
    (16) VAR_LIST -> . TYPE SYMBOL_LIST SEMI_COLON
    (174) TYPE -> . TYPE_I
    (175) TYPE -> . TYPE_F
    (176) TYPE -> . TYPE_S
    (177) TYPE -> . TYPE_B
    (178) TYPE -> . TYPE_O
    (179) TYPE -> . TYPE_V

  ! shift/reduce conflict for CLASS_KWD resolved as shift
  ! shift/reduce conflict for TYPE_I resolved as shift
  ! shift/reduce conflict for TYPE_F resolved as shift
  ! shift/reduce conflict for TYPE_S resolved as shift
  ! shift/reduce conflict for TYPE_B resolved as shift
  ! shift/reduce conflict for TYPE_O resolved as shift
  ! shift/reduce conflict for TYPE_V resolved as shift
    MAIN_KWD        reduce using rule 180 (empty -> .)
    CLASS_KWD       shift and go to state 16
    TYPE_I          shift and go to state 18
    TYPE_F          shift and go to state 19
    TYPE_S          shift and go to state 20
    TYPE_B          shift and go to state 21
    TYPE_O          shift and go to state 22
    TYPE_V          shift and go to state 23

  ! CLASS_KWD       [ reduce using rule 180 (empty -> .) ]
  ! TYPE_I          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_F          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_S          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_B          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_O          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_V          [ reduce using rule 180 (empty -> .) ]

    GLOBAL_VAR                     shift and go to state 8
    STRUCTURE_DEFINITION           shift and go to state 25
    CLASS_STAR                     shift and go to state 9
    FUNC_DEF_STAR                  shift and go to state 10
    empty                          shift and go to state 11
    VAR_LIST_STAR                  shift and go to state 12
    CLASS                          shift and go to state 13
    FUNC_DEF                       shift and go to state 14
    VAR_LIST                       shift and go to state 15
    TYPE                           shift and go to state 17

state 9

    (3) STRUCTURE_DEFINITION -> CLASS_STAR . STRUCTURE_DEFINITION
    (2) STRUCTURE_DEFINITION -> . GLOBAL_VAR STRUCTURE_DEFINITION
    (3) STRUCTURE_DEFINITION -> . CLASS_STAR STRUCTURE_DEFINITION
    (4) STRUCTURE_DEFINITION -> . FUNC_DEF_STAR STRUCTURE_DEFINITION
    (5) STRUCTURE_DEFINITION -> . empty
    (27) GLOBAL_VAR -> . VAR_LIST_STAR
    (8) CLASS_STAR -> . CLASS CLASS_STAR
    (9) CLASS_STAR -> . empty
    (28) FUNC_DEF_STAR -> . FUNC_DEF FUNC_DEF_STAR
    (29) FUNC_DEF_STAR -> . empty
    (180) empty -> .
    (14) VAR_LIST_STAR -> . VAR_LIST VAR_LIST_STAR
    (15) VAR_LIST_STAR -> . empty
    (10) CLASS -> . CLASS_KWD ID seen_class_id_declaration OPEN_CURLY CLASS_ATTR seen_class_attr FUNC_DEF_STAR CLOSE_CURLY
    (30) FUNC_DEF -> . TYPE ID seen_func_id OPEN_PARENTHESIS FUNC_PARAM CLOSE_PARENTHESIS seen_func_params VARS seen_func_vars OPEN_CURLY STATEMENT_STAR CLOSE_CURLY
    (16) VAR_LIST -> . TYPE SYMBOL_LIST SEMI_COLON
    (174) TYPE -> . TYPE_I
    (175) TYPE -> . TYPE_F
    (176) TYPE -> . TYPE_S
    (177) TYPE -> . TYPE_B
    (178) TYPE -> . TYPE_O
    (179) TYPE -> . TYPE_V

  ! shift/reduce conflict for CLASS_KWD resolved as shift
  ! shift/reduce conflict for TYPE_I resolved as shift
  ! shift/reduce conflict for TYPE_F resolved as shift
  ! shift/reduce conflict for TYPE_S resolved as shift
  ! shift/reduce conflict for TYPE_B resolved as shift
  ! shift/reduce conflict for TYPE_O resolved as shift
  ! shift/reduce conflict for TYPE_V resolved as shift
    MAIN_KWD        reduce using rule 180 (empty -> .)
    CLASS_KWD       shift and go to state 16
    TYPE_I          shift and go to state 18
    TYPE_F          shift and go to state 19
    TYPE_S          shift and go to state 20
    TYPE_B          shift and go to state 21
    TYPE_O          shift and go to state 22
    TYPE_V          shift and go to state 23

  ! CLASS_KWD       [ reduce using rule 180 (empty -> .) ]
  ! TYPE_I          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_F          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_S          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_B          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_O          [ reduce using rule 180 (empty -> .) ]
  ! TYPE_V          [ reduce using rule 180 (empty -> .) ]

    CLASS_STAR                     shift and go to state 9
    STRUCTURE_DEFINITION           shift and go to state 26
    GLOBAL_VAR                     shift and go to state 8
    FUNC_DEF_STAR                  shift and go to state 10
    empty                          shift and go to state 11
    VAR_LIST_STAR                  shift and go to state 12
    CLASS                          shift and go to state 13
    FUNC_DEF                       shift and go to state 14
    VAR_LIST                       shift and go to state 15
    TYPE                           shift and go to state 17

state 10

    (4) STRUCTURE_DEFINITION -> FUNC_DEF_STAR . STRUCTURE_DEFINITION
    (2) STRUCTURE_DEFINITION -> . GLOBAL_VAR STRUCTURE_DEFINITION
    (3) STRUCTURE_DEFINITION -> . CLASS_STAR STRUCTURE_DEFINITION
    (4) STRUCTURE_DEFINITION -> . FUNC_DEF_STAR STRUCTURE_DEFINITION
    (5) STRUCTURE_DEFINITION -> . empty
    (27) GLOBAL_VAR -> . VAR_LIST_STAR
    (8) CLASS_STAR -> . CLASS CLASS_STAR
    (9) CLASS_STAR -> . empty
    (28) FUNC_DEF_STAR -> . FUNC_DEF FUNC_DEF_STAR
    (29) FUNC_DEF_STAR -> . empty
    (180) empty -> .
    (14) VAR_LIST_STAR -> . VAR_LIST VAR_LIST_STAR
    (15) VAR_LIST_STAR -> . empty
    (10) CLASS -> . CLASS_KWD ID seen_class_id_declaration OPEN_CURLY CLASS_ATTR seen_class_attr FUNC_DEF_STAR CLOSE_CURLY
    (30) FUNC_DEF -> . TYPE ID seen_func_id OPEN_PARENTHESIS FUNC_PARAM CLOSE_PARENTHESIS seen_func_params VARS seen_func_vars OPEN_CURLY STATEMENT_STAR CLOSE_CURLY
    (16) VAR_LIST -> . TYPE SYMBOL_LIST SEMI_COLON
    (174) TYPE -> . TYPE_I
    (175) TYPE -> . TYPE_F
    (176) TYPE -> . TYPE_S
    (177) TYPE -> . TYPE_B
    (178) TYPE -> . TYPE_O
    (179) TYPE -> . TYPE_V
